fix: frontend ts, backend security, lru cache